[package]
name = "aktors"
version = "0.1.0"
edition = "2018"
authors = ["insanitybit <insanitybit@gmail.com>", "d0nut <nathanial.lattimer@gmail.com>"]

[dependencies]
futures = "^0.1"
fibers = "0.1"
two-lock-queue = "*"
chashmap = "2.*.*"
tokio = {version = "^0.1"}

[dependencies.uuid]
version = "0.3.*"
features = ["v4"]