[package]
name = "aktors"
version = "0.3.0"
edition = "2018"

description = "Driver for derive-aktor"
license = "MIT"

authors = ["insanitybit <insanitybit@gmail.com>", "d0nut <nathanial.lattimer@gmail.com>"]

[dependencies]
async-trait = "0.1"

[dependencies.tokio]
version = "0.2"
features = ["sync", "time"]
